modernize junit5 usage